# platform-infrastructure

./: .gitignore  CLAUDE_STEERING_GUIDE.md  LICENSE.txt  PROGRESS_REPORT_AND_NEXT_STEPS.md  PROJECT_CREATION_GUIDE.md  PROVIDER_METADATA_REGISTRY_ROADMAP.md  README.md  SSG_INTEGRATION_GUIDE.md  app.py  cdk.json  pyproject.toml  test_theme_system.py  test_unified_factory_integration.py
clients/_templates/: client_config.py  client_schema.py  matrix_parser.py  tier1_individual.json  tier2_business.json  tier3_enterprise.json
docs/: ARCHITECTURE_DECISION_DYNAMIC_STACK_GENERATION.md  FACTORY_CONSOLIDATION_STRATEGY.md  IMPLEMENTATION_ARCHITECTURE_ALIGNMENT_PLAN.md  SSG_TEMPLATE_STACK_IMPLEMENTATION_STRATEGY.md  configuration_consolidation_summary.md
docs/architecture/: COMPOSED_STACK_OWNERSHIP_CRISIS.md  CRITICAL_CORRECTION_implementation_analysis.md  INTERNAL_NETWORKING_PLAN.md  README.md  cdk-strategy.md  cms-ecommerce-composition-plan.md  cms-ssg-flexibility-refactoring.md  comprehensive-composition-inheritance-examples.md  cross-document-consistency-plan.md  current-event-system-architecture.md  ecommerce-provider-flexibility-refactoring.md  event-driven-composition-architecture.md  implementation-vs-documentation-analysis.md  unified-webhook-router-implementation.md
docs/business/: tech-stack-product-matrix.md
docs/examples/: contentful_cms_tier_capability_guide.md  contentful_cms_tier_examples.md  shopify_basic_tier_examples.md
docs/future-features/: STATE_RECONCILER_DESIGN.md  edge-optimized-delivery-layer.md  viral-marketing-engine.md
docs/implementation/: PROVIDER_METADATA_REGISTRY.md  PROVIDER_METADATA_REGISTRY_SYSTEM_GUIDE.md  dual_mode_implementation_plan.md  jekyll-ssg-usage-guide.md  optional-shared-infrastructure-strategy.md  ssg-system-architecture.md
docs/strategy/: cdk-implementation-strategy.md
examples/: complete_integration_example.py  composed_stack_examples.py  consolidated_config_demo.py  decap_cms_demo.py  decap_cms_tier_examples.py  end_to_end_system_demo.py  sanity_cms_tier_examples.py  tina_cms_tier_examples.py
lambda/build_batching/: build_batching.py
lambda/build_trigger/: build_trigger.py
lambda/integration_handler/: integration_handler.py
models/: client_templates.py  cms_config.py  component_enums.py  composition.py  service_config.py
registry/: IMPLEMENTATION_COMPLETE.md  README.md  demo_cli.py  json_provider_registry.py
registry/examples/: example_provider.json
registry/schema/: provider_metadata_schema.json
registry/validation/: validate_metadata.py
shared/: ssg_engines.py
shared/base/: base_ecommerce_stack.py
shared/compatibility/: client_config_adapter.py
shared/composition/: integration_layer.py  optimized_content_cache.py  provider_adapter_registry.py
shared/constructs/: provider_registry_construct.py
shared/factories/: cms_stack_factory.py  ecommerce_stack_factory.py  platform_stack_factory.py  ssg_stack_factory.py
shared/interfaces/: composable_component.py
shared/ssg/: __init__.py  base_engine.py  core_models.py  factory.py  site_config.py  static_site_config.py
shared/theme_registry/: theme_models.py
stacks/: __init__.py
stacks/cms/: __init__.py  (+6 more)
tests/: test_contentful_cms_tier.py  test_decap_cms_tier.py  test_ecommerce_flexibility.py  test_event_driven_integration.py  test_sanity_cms_tier.py  test_shopify_basic_tier.py  test_ssg_engines.py  test_ssg_integration.py  test_ssg_integration.py.backup  test_ssg_integration_updated.py  test_tina_cms_tier.py
(+105 files in other folders)
